# CISCOR-projects

./: README.md
cfw11_ros2_control/: modbus_test.py  test_modbus.py
install/: local_setup.sh  setup.sh
install/cfw11_ros2_control/lib/cfw11_ros2_control/: treadmill_node
install/cfw11_ros2_control/share/cfw11_ros2_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_rqt_cfw11_gui/share/my_rqt_cfw11_gui/: package.dsv  package.ps1  package.sh  plugin.xml
install/my_rqt_speed_slider/share/my_rqt_speed_slider/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rqt_cfw11_gui/share/rqt_cfw11_gui/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/cfw11_ros2_control/: generalguidelines.txt  setup.cfg  setup.py
src/cfw11_ros2_control/cfw11_ros2_control/: treadmill_node.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/my_rqt_cfw11_gui/share/my_rqt_cfw11_gui/: cfw11.ui  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  plugin.xml
src/log/: latest_build
src/rqt_cfw11_gui/: setup.cfg  setup.py
src/rqt_cfw11_gui/resource/: MyPlugin.ui  plugin.xml
src/rqt_cfw11_gui/rqt_cfw11_gui/: my_plugin.py
testing reciever/: set_speed_manual_run.py  spin_slowly.py
