<?xml version="1.0"?>
<package format="3">
  <name>cfw11_ros2_control</name>
  <version>0.1.0</version>
  <description>ROS 2 Modbus control for WEG CFW-11</description>
  <maintainer email="wangykev@gmail.com">ciscor</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pymodbus</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
